# bluedroid.for.linux

./: CMakeLists.txt  README.md
audio_a2dp_hw/: Android.mk
bta/: CMakeLists.txt
bta/dm/: bta_dm_act.c
btif/co/: bta_fs_co.c  bta_hh_co.c  bta_hl_co.c  bta_pan_co.c
btif/include/: btif_common.h  btif_sock_util.h
btif/src/: bluetooth.c  btif_av.c  btif_config.c  btif_config_util.cpp  btif_core.c  btif_dm.c  btif_hf.c  btif_hh.c  btif_hl.c  btif_pan.c  btif_profile_queue.c  btif_rc.c  btif_sock_rfc.c  btif_sock_sdp.c  btif_sock_thread.c  btif_sock_util.c  btif_storage.c
devices/: Android.mk
devices/ap6210/: Android.mk
devices/ap6210/libbt/include/: bt_vendor_brcm.h  vnd_buildcfg.h
devices/ap6210/libbt/src/: hardware.c  userial_vendor.c
devices/mtk6622/: Android.mk  Androidmk-orig  MTK_MT6622_E2_Patch.nb0  bt_drv.c  bt_mtk.h  init.mt6622.rc  mtk.c  os_dep.h  radiomgr.c  radiomod.c
devices/mtk6622/custom/: CFG_BT_File.h  cust_bt.h
devices/rtk8723/: Android.mk
devices/rtk8723/config/: Android.mk
devices/rtk8723/libbt/: Android.mk  CMakeLists.txt
devices/rtk8723/libbt/include/: vnd_buildcfg.h
devices/rtk8723/libbt/src/: bt_vendor_rtk.c  hardware.c  upio.c  userial_vendor.c
embdrv/sbc/encoder/include/: sbc_encoder.h
embdrv/sbc/encoder/srce/: sbc_encoder.c
gki/: CMakeLists.txt
gki/common/: gki_buffer.c
gki/ulinux/: gki_ulinux.c
hardware/: fb.h  gralloc.h  gralloc_priv.h  hwcomposer.h  hwcomposer_defs.h  overlay.h
hci/: 1.diff  Android.mk  CMakeLists.txt
hci/include/: bt_hci_lib.h
hci/src/: btsnoop.c  hci_h4.c  hci_h4_mtk.c  hci_h5.c  lpm.c  userial.c
include/: bt_target.h  bt_trace.h  uhid.h
main/: CMakeLists.txt  bte_conf.c  bte_logmsg.c
stack/: CMakeLists.txt
stack/btm/: btm_int.h  btm_sec.c
stack/btu/: btu_hcif.c
stack/rfcomm/: port_api.c
stack/sdp/: sdp_api.c
test/bluedroidtest/: CMakeLists.txt  bluedroidtest.c
udrv/ulinux/: uipc.c
utils/: CMakeLists.txt
utils/include/utils/: Log.h
utils/src/: bt_utils.c
